# Charing_Cabinet

./: CMakeLists.txt  PROJECT_NOTES.md  README.md  智能充电仓.md
config/: device_config.json
include/chinese/: ui_fonts.h
include/device/: modbus_bus.h  temperature_sensor.h
include/ui/: cabinet_card.h  ui_bottom_bar.h  ui_cabinet_card.h  ui_status_card.h  ui_system_log.h  ui_top_bar.h
src/: main.c
src/chinese/: font_chinese_12.c  font_chinese_16.c  ui_fonts.c
src/device/: modbus_bus.c  temperature_sensor.c
src/ui/: ui_bottom_bar.c  ui_cabinet_card.c  ui_status_card.c  ui_system_log.c  ui_top_bar.c
tests/: test.c
tools/: generate_chinese_font.py
